--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -4,4 +4,21 @@
   justify-content: space-between;
   margin-top: 10px;
   height: 100px;
+  padding: 2%;
+  flex-grow: 1;
+  flex-basis: 16%;
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
+
+.productcard {
+  display: flex;
+  flex-direction: wrap;
+  width: 200px;
+  height: 100%;
+  background-color: rgb(10, 112, 196);
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+  margin-bottom: 10px;
+  padding: 10px;
 }
