--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -14,7 +14,7 @@
 .productcard {
   display: flex;
   flex-direction: wrap;
-  width: 200px;
+  width: 100%;
   height: 100%;
   background-color: rgb(10, 112, 196);
   border-radius: 5px;
