--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -1,24 +1,25 @@
-.products {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-top: 10px;
-  height: 100px;
-  padding: 2%;
-  flex-grow: 1;
-  flex-basis: 16%;
-  margin-bottom: 10px;
-  border-radius: 5px;
-}
-
-.productcard {
-  display: flex;
-  flex-direction: wrap;
+.container {
   width: 100%;
   height: 100%;
-  background-color: rgb(10, 112, 196);
-  border-radius: 5px;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
-  margin-bottom: 10px;
-  padding: 10px;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: space-between !important;
+  font-style: oblique;
+  color: rgb(240, 242, 243);
+  border-radius: 10px solid rgb(29, 92, 124);
+}
+
+.precio {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: rgb(240, 242, 243);
+}
+
+.id {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: rgb(240, 242, 243);
 }
