--- a/src/components/CustomNavBar.css
+++ b/src/components/CustomNavBar.css
@@ -1,6 +1,9 @@
 .bg-blue {
+  width: 100%;
+  height: auto;
   background-color: rgb(59, 59, 214);
   padding: 0px;
+  margin-bottom: 5px;
 }
 
 .logo {
@@ -9,9 +12,12 @@
 }
 
 .content {
+  padding: 0px;
+  margin-bottom: 10px;
   margin-top: 40px;
   padding: 12px;
-  height: 3000px;
+  height: 100%;
+  width: 100%;
 }
 
 .navbar {
